--- a/PowerOfficeCase/Shared/Oppgave2.razor
+++ b/PowerOfficeCase/Shared/Oppgave2.razor
@@ -21,7 +21,7 @@
     List<BrregEnhet> brregEnhetList = new List<BrregEnhet>();
     int dataSize = 4;
     List<double> pieData = new List<double>();
-    string[] labels = { "ENK", "Annet", "AS 0-4 Ansate", "AS 5-10 Ansate", "AS>10 Ansate" };
+    string[] labels = { "ENK", "Annet", "AS 0-4 Ansatte", "AS 5-10 Ansatte", "AS>10 Ansatte" };
 
     async Task ListFiles()
     {
