--- a/PowerOfficeCase/Shared/Oppgave1.razor.css
+++ b/PowerOfficeCase/Shared/Oppgave1.razor.css
@@ -16,13 +16,13 @@
         color: #333;
     }
 
-    .dropArea input[type=file] {
+    /*.dropArea input[type=file] {
         position: absolute;
         width: 100%;
         height: 100%;
         opacity: 0;
         cursor: pointer;
-    }
+    }*/
 
 .dropAreaDrug {
     background-color: darkgray;
